~ Optimized: The SatelliteDropper fleet management is now more streamlined and stable, thanks to the utilization of in-game functionality.
~ Optimized: Generic code optimizations have been carried out for improved performance.

v1.0.5 -- Current Published Version
~ Added: Implemented a check to clear the internal blacklist of ships that have been destroyed.
~ Added: The script now calcualtes a path to the target sector and subsequently runs the 'move.generic' command for every gate/highway in the path.
~ Fixed: Resolved an issue where the ship was sometimes unable to reach a sector or would halt after a jump.
~ Fixed: German translation of 'Werft' is now 'Raumdock'.
~ Fixed: The internal blacklist was being cleared when the script was reloaded. This caused the ship to forget which sector it was working in. 
         Given the sorting process via estimate_time, the ship might choose to go to another sector even though it had work remaining in its current sector.
~ Changed: The script now calculates its own safe position instead of using the 'get_safe_pos' command from Egosoft, which hasn't been working properly in some cases.

v1.0.6 -- Current Development Version
~ Added: Chzech translation.
~ Added: The mod now utilizes the JP_ScriptLibrary for some functions, reducing code volume and streamlining the addition and fixing of code.
~ Added: Option to enable/disable notifications and logging in logbook.
~ Added: More logging and notifications.
~ Fixed: There was an issue with the function that checks whether a station has enough resources to build all the necessary satellites. 
         This issue caused the ship to dock and wait for resources, potentially for an extended period of time, depending on when the station was resupplied with resources.
~ Fixed: Rare case where the Sector selection could fail.
~ Changed: Moved some translations to the JP_ScriptLibrary.
~ Updated: Several code cleanup and translations changes.